--- a/picoTemplate.html
+++ b/picoTemplate.html
@@ -12,7 +12,8 @@
 	
         <link rel="stylesheet" href="http://blog.plock.org/highlight/styles/docco2.css" type="text/css"/>
 	<link rel="stylesheet" href="{{ theme_url }}/style.css" type="text/css" />
-	
+	<script src="http://blog.plock.org/highlight/highlight.pack.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <div class="header">
