tweaking wiki url

--- a/picoTemplate.html
+++ b/picoTemplate.html
@@ -30,7 +30,7 @@
                 <li><a href="/">Home</a>
                 </li><li><a href="http://www.linkedin.com/pub/chris-plock/1/7b0/6a4">About</a>
                 </li><li> <a href="/pico">Blog</a>
-                </li><li> <a href="/dokuwiki">Wiki</a>
+                </li><li> <a href="/wiki">Wiki</a>
                 </li>
         </ul>
     </div>
